--- a/src/components/firstSection/styles.module.scss
+++ b/src/components/firstSection/styles.module.scss
@@ -111,6 +111,7 @@
     position: absolute;
     margin-top: -15rem;
     width: 1080px;
+    height: 1500px;
     overflow: hidden;
   }
   .abstractFirstSection2 {
