--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -31,7 +31,7 @@
         z-index: 1;
         color: #ffffff;
         font-family: Montserrat;
-        font-size: 15px;
+        font-size: 12px;
         font-weight: bold;
         font-style: normal;
         text-align: left;
@@ -43,7 +43,7 @@
     }
 
     .footerTop {
-
+      margin-left: 5rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
